@@ -78,6 +78,7 @@
   <printer><id>printer/Epson-LP-9200C</id></printer>
   <printer><id>printer/Epson-LP-9500C</id></printer>
   <printer><id>printer/Epson-LP-9800C</id></printer>
+  <printer><id>printer/Epson-LP-M5000</id></printer>
   <printer><id>printer/Epson-LP-M6000</id></printer>
   <printer><id>printer/Epson-LP-S6500</id></printer>
   <printer><id>printer/Epson-LP-S7500</id></printer>
