@@ -618,6 +618,11 @@
      </constraint>
      <constraint sense="false">
       <make>Epson</make>
+      <model>LP-M5000</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Epson</make>
       <model>LP-M6000</model>
       <arg_defval>na</arg_defval>
      </constraint>
