@@ -996,6 +996,10 @@
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
+      <printer>printer/Epson-LP-M5000</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
       <printer>printer/Epson-LP-M6000</printer>
       <arg_defval>na</arg_defval>
      </constraint>
@@ -1131,6 +1135,10 @@
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
+      <printer>printer/Epson-LP-M5000</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
       <printer>printer/Epson-LP-M6000</printer>
       <arg_defval>na</arg_defval>
      </constraint>
@@ -1258,6 +1266,10 @@
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
+      <printer>printer/Epson-LP-M5000</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
       <printer>printer/Epson-LP-M6000</printer>
       <arg_defval>na</arg_defval>
      </constraint>
@@ -1382,6 +1394,10 @@
      </constraint>
      <constraint sense="false">
       <printer>printer/Epson-LP-S300</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <printer>printer/Epson-LP-M5000</printer>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
