@@ -132,6 +132,11 @@
      </constraint>
      <constraint sense="true">
       <driver>eplaser-jp</driver>
+      <printer>printer/Epson-LP-M5000</printer>
+      <arg_defval>ev/eplaser-jp-Model-lpm5000</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <driver>eplaser-jp</driver>
       <printer>printer/Epson-LP-M6000</printer>
       <arg_defval>ev/eplaser-jp-Model-lpm6000</arg_defval>
      </constraint>
@@ -715,6 +720,28 @@
      <constraint sense="true">
       <driver>eplaser-jp</driver>
       <printer>printer/Epson-LP-S300</printer>
+     </constraint>
+    </constraints>
+   </enum_val>
+   <enum_val id="ev/eplaser-jp-Model-lpm5000">
+    <ev_longname>
+     <en>Epson LP-M5000</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>lpm5000</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>lp8500c</ev_driverval>
+    <constraints>
+     <constraint sense="false">
+      <driver>eplaser-jp</driver>
+     </constraint>
+     <constraint sense="true">
+      <driver>eplaser-jp</driver>
+      <printer>printer/Epson-LP-M5000</printer>
      </constraint>
     </constraints>
    </enum_val>
