@@ -1,6 +1,6 @@
-<printer id="printer/Epson-LP-M6000">
+<printer id="printer/Epson-LP-M5000">
   <make>Epson</make>
-  <model>LP-M6000</model>
+  <model>LP-M5000</model>
   <mechanism>
     <laser/>
     <color/>
@@ -16,7 +16,7 @@
       </comments>
     <!--one or more "partno" elements.--></consumables>
   </mechanism>
-  <url>http://www.epson.jp/products/offirio/mfp/lpm6000/</url>
+  <url>http://www.epson.jp/products/offirio/mfp/lpm5000/</url>
   <lang>
     <proprietary />
   </lang>
