@@ -1,3 +1,8 @@
+2008-12-18  AVASYS Corporation <pipsnews@avasys.jp>
+
+	* db/source/printer/Epson-LP-M5000.xml: new printer added
+	* db/source/printer/Epson-LP-M6000.xml: fixed URL
+
 2008-11-30  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* driver/lbp800.xml, printer/Canon-LBP-800.xml: Added "lbp880"
